fixed layout bug on mobile

--- a/source/style/partial/_header.scss
+++ b/source/style/partial/_header.scss
@@ -40,6 +40,7 @@
 .short-menu {
     display: inline-block;
     font-size: 22px;
+    max-width: 60%;
     text-align: center;
     vertical-align: top;
 }
