--- a/source/style/partial/_intro.scss
+++ b/source/style/partial/_intro.scss
@@ -44,8 +44,11 @@
     }
 
 .intro-video {
-    background: url("images/video-play.png") center / 15% no-repeat;
     background-color: #2196d8;
+    background-image: url("images/video-play.png");
+    background-position: center;
+    background-size: 15%;
+    background-repeat: no-repeat;
     position: relative;
     cursor: pointer;
     max-height: 879px;
@@ -66,6 +69,7 @@
 }
 
     .intro-video__video {
+        background-color: transparent;
         position: relative;
         width: 100%;
         z-index: 1;
