--- a/source/style/partial/_portfolio.scss
+++ b/source/style/partial/_portfolio.scss
@@ -43,7 +43,7 @@
 .portfolio-slide__img {
     display: block;
     width: 100%;
-    max-width: 700px;
+    max-width: 850px;
     margin-left: auto;
     margin-right: auto;
 }
